module(name = "scip_java")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "protobuf", version = "34.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "7.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.protobuf:protobuf-java-util:4.34.2",
        "org.projectlombok:lombok:1.18.46",
        "org.scip-code:scip-java-bindings:0.8.0",
    ],
    known_contributing_modules = ["protobuf"],
    repositories = ["https://repo1.maven.org/maven2"],
)
use_repo(maven, "maven")
