module(name = "scip_java")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "protobuf", version = "34.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "7.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.protobuf:protobuf-java-util:4.34.2",
        "org.projectlombok:lombok:1.18.22",
        "org.scip-code:scip-java-bindings:0.8.0",
    ],
    known_contributing_modules = ["protobuf"],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    lock_file = "//:maven_install.json",
)

# Keep changing in-repo tool artifacts unpinned: `mvn install` populates m2Local
# before Bazel runs, avoiding duplicate Bazel-side build rules for these jars.
maven.install(
    name = "local_maven",
    artifacts = [
        "com.sourcegraph:scip-aggregator:0.0.0-SNAPSHOT",
        "com.sourcegraph:scip-javac:jar:all:0.0.0-SNAPSHOT",
    ],
    fail_on_missing_checksum = False,
    repositories = [
        "m2Local",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven", "local_maven")
